gl51-master/src/test/deca/context/invalid/testObject_rule2_5.deca
//Description
//Champ déclaré de type void

class A {
    void a;// type différent de void
    void x(){}
}
//passed
